--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
 <body>
 <div class="container">
   <div class="starter-template">
-    <h1>与佛论禅重制版V2</h1>
-    <p class="lead">（如果您第一次使用请阅读“普渡众生”）</p>
+    <h1>你的甲方</h1>
   </div>
   <!--error-->
   <div class="row">
     <div class="col-lg-2"></div>
     <div class="col-12 col-lg-8" id="alert">
-      <div class="alert alert-danger alert-dismissable hide" id="error-alert" role="alert"> 不可说,不可说,一说即是错 </div>
+      <div class="alert alert-danger alert-dismissable hide" id="error-alert" role="alert"> 回去重做！ </div>
     </div>
     <div class="col-lg-2"></div>
   </div>
@@ -49,7 +48,7 @@
     <div class="col-lg-2"></div>
     <div class="col-12 col-lg-8">
       <div class="form-group">
-        <textarea class="form-control" id="text-decryped" placeholder="你的困惑" rows="5"></textarea>
+        <textarea class="form-control" id="text-decryped" placeholder="你的需求" rows="5"></textarea>
       </div>
     </div>
     <div class="col-lg-2"></div>
@@ -58,21 +57,18 @@
     <div class="col-lg-2"></div>
     <div class="col-12 col-lg-3 leftb">
       <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-primary" onClick="encrypt()">听佛讲经</button>
-        <button type="button" class="btn btn-warning" onClick="decrypt()">听佛解惑</button>
+        <button type="button" class="btn btn-primary" onClick="encrypt()">给甲方讲经</button>
+        <button type="button" class="btn btn-warning" onClick="decrypt()">帮甲方翻译</button>
       </div>
     </div>
     <div class="col-12 col-lg-5 button-cen">
-      <div class="form-group">
-        <input type="password" class="form-control" id="text-key" placeholder="箴言（可选）">
-      </div>
     </div>
   </div>
   <div class="row">
     <div class="col-lg-2"></div>
     <div class="col-12 col-lg-8">
       <div class="form-group">
-        <textarea class="form-control" id="text-encryped" placeholder="佛的答案" rows="7"></textarea>
+        <textarea class="form-control" id="text-encryped" placeholder="甲方的话" rows="7"></textarea>
       </div>
     </div>
     <div class="col-lg-2"></div>
@@ -80,7 +76,7 @@
   <div class="row lowroe">
     <div class="col-lg-2"></div>
     <div class="col-4 col-lg-2 leftb">
-      <button type="button"  class="btn btn-primary" data-toggle="modal" data-target="#aboutModal">普渡众生</button>
+      <button type="button"  class="btn btn-primary" data-toggle="modal" data-target="#aboutModal">这是啥子？</button>
     </div>
     <div class="col-4 col-lg-4"> </div>
     <div class="col-4 col-lg-2 rightb">
@@ -95,19 +91,15 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">普渡众生（帮助）</h5>
+        <h5 class="modal-title" id="exampleModalLabel">这是啥子？</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
       </div>
       <div class="modal-body">
         <p>Q：这是什么？</p>
-        <p>A：这是一个用于混淆/加密文本的小工具，灵感来自<a href="http://www.keyfc.net/bbs/tools/tudoucode.aspx">原版与佛论禅</a>，并且在其基础上进行了改进使其获得加密功能。</p>
-        <p>Q：如何使用？</p>
-        <p>A：听佛讲经（加密）：将原文输入在上方输入框，输入箴言（密码，可选）即可得到佛语（密文）；听佛解惑（解密）：将佛经（密文）输入在上方，输入箴言（可选）即可得到原文。</p>
-        <p>Q：为何无法得到原文</p>
-        <p>A：原文已损坏，部分软件（百度贴吧）会自动转义繁体字导致无法解读。另外，也请您自行确定原文完整程度，解密时需保留“佛又曰”。</p>
+        <p>A：这是你的甲方。</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">然也</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">*龙门粗口*</button>
       </div>
     </div>
   </div>
@@ -115,7 +107,7 @@
 
 <!-- Footer -->
 <footer class="footer mt-auto py-3">
-  <div class="container"> <span class="text-muted">This website has nothing to do with religion.<br>
+  <div class="container"> <span class="text-muted">This website has nothing to do with any company.<br>
     Developed by <a href="https://github.com/takuron">Takuron</a> and open source on <a href="https://github.com/takuron/talk-with-buddha">GitHub</a>.</span> </div>
 </footer>
 <script src="js/jquery.slim.min.js" ></script> 
